[package]
name = "dariodip_grrs"
version = "0.1.0"
edition = "2021"
authors = ["Dario Di Pasquale <darionovantadue@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/dariodip/grrs"
repository = "https://github.com/dariodip/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.1"
log = "0.4.0"
env_logger = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
